# advent-of-code

2018/: 01a.cc  01b.cc  02a.cc  02b-1.cc  02b-2.cc  03a-1.cc  03a-2.cc  03b.cc  04-common.cc  04-common.hh  04a.cc  04b.cc  05a.cc  05b.cc  06a-map.txt  06a.cc  06b-map.txt  06b.cc  07a.cc  07b.cc  CMakeLists.txt  README.md
2019/: 01a.cc  01b.cc  02-common.cc  02-common.hh  02a.cc  02b.cc  03.cc  04-1.cc  04-2.cc  05a.cc  05b.cc  06.cc  07a.cc  07b.cc  08a.cc  08b.cc  09a.cc  09b.cc  10a.cc  CMakeLists.txt  do-regression-test  intcode.cc  intcode.hh  puzzle-output.txt
2020/: 01-entries.go  01a.go  01b.go  02-passwords.go  02.go  03-treemap.go  03.go  04-passport.go  04.go  05.go  06.go  Makefile.rules  build  puzzle-output.txt  run-regression-test
2022/: 01.go  CMakeLists.txt  Makefile.rules  go.work  run-regression-test  server.go  setup
2022/day01/: 01.css  CMakeLists.txt  css.go  go.mod  graph-js.go  graph.go  graph.js  info.go  init.go  main.go  text.go
2022/server/: CMakeLists.txt  go.mod  main.go
2022/util/: CMakeLists.txt  error.go  go.mod  go.sum  http.go  index.css  index.go  index.html  types.go
2022/util/log/: CMakeLists.txt
